--- a/mysite/main/templates/main/base.html
+++ b/mysite/main/templates/main/base.html
@@ -58,7 +58,7 @@
                 <!--a = linktag, href points to web address-->
                 <a href='/home'>Home</a>
                 <a href='/create'>Create</a>
-                <a href='/2'>View</a>
+                <a href='/view'>View</a>
             </div>
 
             <div id="content", name="content", class='main'>
